add: listAgents to GameRepository